# SDL2-gfx

./: CMakeLists.txt  README.md  makefile
include/: SDL2_framerate.h  SDL2_gfxPrimitives.h  SDL2_imageFilter.h  SDL2_rotozoom.h
src/: CMakeLists.txt  SDL2_framerate.c  SDL2_gfxPrimitives.c  SDL2_imageFilter.c  SDL2_rotozoom.c
test/: CMakeLists.txt  main.c
